--- a/css/style.scss
+++ b/css/style.scss
@@ -169,6 +169,14 @@ body {
     }
 }
 
+footer {
+    width: 100%;
+    height: 80px;
+    text-align: center;
+    color: $basic-color;
+    line-height: 80px;
+}
+
 .hidden {
     display: none;
 }
