--- a/css/style.scss
+++ b/css/style.scss
@@ -1,182 +1,197 @@
-@import 'variable';
-@import 'mixin';
+@import "variable";
+@import "mixin";
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: $basic-font;
-    border: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $basic-font;
+  border: 0;
 }
 
 body {
-    background-image: url('/img/body_bg.png');
-    @include mobile {
-        background: #fff;
-    }
+  background-image: url("/img/body_bg.png");
+  @include mobile {
+    background: #fff;
+  }
 }
 
+.active {
+  border-bottom: 4px solid $title-color;
+  font-weight: bold;
+  cursor: pointer;
+}
+.notActive {
+    border-bottom: 0;
+    font-weight: nomal;
+    cursor: pointer;
+  }
+
 .container {
-    border-top: 4px solid $title-color;
-    z-index: 1;
-    min-height: 100vh;
-    margin: 0 auto;
-    padding: 0 10px;
-    background: $white;
-    @include desktop {
-        width: 70%;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    }
-    @include tablet {
-        width: 70%;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-    }
+  border-top: 4px solid $title-color;
+  z-index: 1;
+  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0 10px;
+  background: $white;
+  @include desktop {
+    width: 70%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
+  @include tablet {
+    width: 70%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  }
+  @include mobile {
+    width: 100%;
+  }
+  h1 {
+    color: $title-color;
+    font-family: $basic-font;
+    font-size: 1.8rem;
+    padding: 0.6em 0 0.4em;
     @include mobile {
-        width: 100%;
+      padding: 0.4em 0 0.2em;
+      text-align: center;
+      font-size: 2.3rem;
     }
-    h1 {
-        color: $title-color;
-        font-family: $basic-font;
-        font-size: 1.8rem;
-        padding: 0.6em 0 0.4em;
+  }
+
+  .input-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    input {
+      width: 88%;
+      padding: 0.6em;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+      letter-spacing: 1.2px;
+      font-weight: bold;
+      color: $basic-color;
+    }
+    input:focus-visible {
+      outline: 0px;
+    }
+    input:focus::-webkit-input-placeholder {
+      color: transparent;
+    }
+    input::placeholder {
+      color: #ccc;
+    }
+    button {
+      width: 10%;
+      border-radius: 4px;
+      font-size: 10px;
+      background: $title-color;
+      padding: 0.6em;
+      @include mobile {
+        padding: 0.6em 0;
+      }
+    }
+    i {
+      color: white;
+    }
+  }
+  .task-area {
+    margin: 14px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    flex-wrap: wrap;
+    .task-tabs {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: left;
+      border: 1px solid #ccc;
+      border-radius: 4px 4px 0 0;
+      text-align: center;
+      div {
+        font-size: 1em;
+        height: 60px;
+        line-height: 60px;
+        color: $basic-color;
+        width: 100px;
+        padding: 0 20px;
         @include mobile {
-            padding: 0.4em 0 0.2em;
-            text-align: center;
-            font-size: 2.3rem;
+          width: 33.3%;
         }
+      }
+      div:hover {
+        border-bottom: 4px solid $title-color;
+        font-weight: bold;
+        cursor: pointer;
+        outline: none;
+      }
+
     }
-    .input-area {
+  }
+
+  #task-board {
+    width: 100%;
+    .task {
+      border-bottom: 1px dashed #ccc;
+      height: 60px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+      padding: 0 0 0 8px;
+      .inputValue {
+        padding-left: 20px;
+      }
+      .taskLine {
+        text-decoration: line-through;
+      }
+      .button-box {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        input {
-            width: 88%;
-            padding: 0.6em;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            font-size: 16px;
-            letter-spacing: 1.2px;
-            font-weight: bold;
-            color: $basic-color;
+        .box-btn {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-right: 1px;
+          height: 50px;
+          width: 50px;
+          border-radius: 4px;
+          padding: 0.6em;
+          @include mobile {
+            padding: 0.6em 0;
+          }
         }
-        input:focus-visible {
-            outline: 0px;
+        .bg01 {
+          background: $reset;
         }
-        input:focus::-webkit-input-placeholder {
-            color: transparent;
+        .bg02 {
+          background: $check;
         }
-        input::placeholder {
-            color: #ccc
-        }
-        button {
-            width: 10%;
-            border-radius: 4px;
-            font-size: 10px;
-            background: $title-color;
-            padding: 0.6em;
-            @include mobile {
-                padding: 0.6em 0;
-            }
+        .bg03 {
+          background: $delete;
         }
         i {
-            color: white;
+          color: white;
+          font-size: 24px;
         }
+      }
     }
-    .task-area {
-        margin: 14px 0;
-        display: flex;
-        flex-direction: row;
-        justify-content: left;
-        align-items: center;
-        flex-wrap: wrap;
-        .task-tabs {
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: left;
-            border: 1px solid #ccc;
-            border-radius: 4px 4px 0 0;
-            text-align: center;
-            div {
-                font-size: 1em;
-                height: 60px;
-                line-height: 60px;
-                color: $basic-color;
-                width: 100px;
-                padding: 0 20px;
-                @include mobile {
-                    width: 33.3%;
-                }
-            }
-            div:hover {
-                border-bottom: 4px solid $title-color;
-                font-weight: bold;
-                cursor: pointer;
-            }
-        }
-    }
-    #task-board {
-        width: 100%;
-        .task {
-            border-bottom: 1px dashed #ccc;
-            height: 60px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
-            padding: 0 0 0 8px;
-            .inputValue {
-                padding-left: 20px;
-            }
-            .taskLine {
-                text-decoration: line-through;
-            }
-            .button-box {
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                align-items: center;
-                .box-btn {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    margin-right: 1px;
-                    height: 50px;
-                    width: 50px;
-                    border-radius: 4px;
-                    padding: 0.6em;
-                    @include mobile {
-                        padding: 0.6em 0;
-                    }
-                }
-                .bg01 {
-                    background: $reset;
-                }
-                .bg02 {
-                    background: $check;
-                }
-                .bg03 {
-                    background: $delete;
-                }
-                i {
-                    color: white;
-                    font-size: 24px;
-                }
-            }
-        }
-    }
+  }
 }
 
 footer {
-    width: 100%;
-    height: 80px;
-    text-align: center;
-    color: $basic-color;
-    line-height: 80px;
+  width: 100%;
+  height: 80px;
+  text-align: center;
+  color: $basic-color;
+  line-height: 80px;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
